Generics part01 and part02 is done

--- a/tonyClass/src/app/java/genenics/genenics.component.html
+++ b/tonyClass/src/app/java/genenics/genenics.component.html
@@ -2,7 +2,7 @@
 <div class="main-div">
     <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/java/generics-basic">Generics Basics</a>
+          <a class="nav-link" routerLink="/java/generics/generics-basic">Generics Basics</a>
         </li>
   
      
