--- a/tonyClass/src/app/java/genenics/generics-basics/generics-basics.component.html
+++ b/tonyClass/src/app/java/genenics/generics-basics/generics-basics.component.html
@@ -16,16 +16,20 @@
 
         <h3> Generics PDF Files</h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/Modifiers/01Modifiers_Part01/01_SuperClassAbstract_AnimalClass.png"
+            <img src="./../../../../assets/images/BackGround/Generics2.png"
                 alt="Arquivo Html" />
-            <iframe src="./../../../../assets/docs/Modifiers/Modifiers_Part01.pdf" width="95%" height="900px"
+            <img src="./../../../../assets/images/BackGround/Generics3.png"
+                alt="Arquivo Html" />
+            <iframe src="./../../../../assets/docs/Generics/Generics_part01.pdf" width="95%" height="900px"
                 style="border: none"></iframe>
 
         </div>
 
         <h3> Generics MainClass Java Part01 Files </h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/Modifiers/01Modifiers_Part01/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872.png"
+            <img src="./../../../../assets/images/Java/Generics/Generics_part01/01_MainClass.png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Generics_part01/02_BaseballTeamClass.png"
                 alt="Arquivo Html" />
 
 
@@ -33,16 +37,24 @@
         </div>
         <h3> Generics MainClass Java Part02 Files</h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/Modifiers/02Modifiers_Part02/04_SuperClassAbstract_AnimalClass.png"
-                alt="Arquivo Html" />
+            <iframe src="./../../../../assets/docs/Generics/Generics_part02.pdf" width="95%" height="900px"
+                style="border: none"></iframe>
 
         </div>
         <h3> Generics Prints Console Files Part02 </h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/Modifiers/02Modifiers_Part02/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36166872.png"
+            <img src="./../../../../assets/images/Java/Generics/Generics_part02/01_Generics_MainClass.png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Generics_part02/02_Generics_BaseballTeamClass.png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Generics_part02/03_Generics_SportTeamClass.png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Generics_part02/04_Generics_TeamClass.png"
                 alt="Arquivo Html" />
 
         </div>
+
+        <!-- Falta fazer parte 3 -->
 
         <h3> Generics MainClass Java Part03 Files</h3>
         <div class="image img-fluid">
