comparable is done

--- a/tonyClass/src/app/java/generics/genenics.component.html
+++ b/tonyClass/src/app/java/generics/genenics.component.html
@@ -4,6 +4,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/java/generics/generics-basic">Generics Basics</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/java/generics/comparable-x-comparator">Comparable vs Comparator</a>
+        </li>
   
      
     
