--- a/tonyClass/src/app/java/generics/comparable-x-comparator/comparable-x-comparator.component.html
+++ b/tonyClass/src/app/java/generics/comparable-x-comparator/comparable-x-comparator.component.html
@@ -89,20 +89,41 @@
 
 
         <h3> Comparables vs Comparator PDF Files</h3>
-        <div class="image img-fluid">
-            <img src="./../../../../assets/images/BackGround/Generics2.png"
-                alt="Arquivo Html" />
-            <img src="./../../../../assets/images/BackGround/Generics3.png"
-                alt="Arquivo Html" />
-            <iframe src="./../../../../assets/docs/Generics/Generics_part01.pdf" width="95%" height="900px"
+        <div class="image img-fluid">            
+            <iframe src="./../../../../assets/docs/Generics/Comparable_interface-X-Comparator.pdf" width="95%" height="900px"
                 style="border: none"></iframe>
 
         </div>
 
         <h3> Generics MainClass Java Part01 Files </h3>
         <div class="image img-fluid">
-            <img src="./../../../../assets/images/Java/Generics/Generics_part01/01_MainClass.png"
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/01_StudentClass_Impalement_Comparator.png"
                 alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/01_MainClass.png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (1).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (1).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (2).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (3).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (4).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (5).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (6).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (7).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (8).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (9).png"
+                alt="Arquivo Html" />
+            <img src="./../../../../assets/images/Java/Generics/Comparable-x-Comparator/Comparable-x-Comparator/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_36747456 (10).png"
+                alt="Arquivo Html" />
+          
           
 
 
