--- a/tonyClass/src/app/java/java.component.html
+++ b/tonyClass/src/app/java/java.component.html
@@ -45,6 +45,11 @@
         >Generics</a
       >
     </li>
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" routerLink="lambda"
+        >Lambda</a
+      >
+    </li>
 
   </ul>
 
