--- a/tonyClass/src/app/java/lambda/lambda.component.html
+++ b/tonyClass/src/app/java/lambda/lambda.component.html
@@ -2,7 +2,7 @@
 <div class="main-div">
     <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/java/modifiers/abstract">Abstract</a>
+          <a class="nav-link" routerLink="/java/lambda/introduction">Introduction Lambda</a>
         </li>
       
   
