lambda-expression is done

--- a/tonyClass/src/app/java/lambda/introduction-lambda/introduction-lambda.component.html
+++ b/tonyClass/src/app/java/lambda/introduction-lambda/introduction-lambda.component.html
@@ -2,19 +2,19 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button type="button" class="btn btn-outline-light" routerLink="/java/modifiers">
-            Modifiers in Java
+          <button type="button" class="btn btn-outline-light" routerLink="/java/lambda">
+            Lambda in Java
           </button>
         </div>
       </div>
     </div>
-  
+
     <div class="row">
       <div class="col-xs-12">
-        <h2>Modifiers Abstract</h2>
+        <h2>Lambda Introduction</h2>
       </div>
-  
-      <h3>Modifiers Abstract Methods</h3>
+
+      <h3>Lambda prints</h3>
       <div class="col-xs-12 picture">
         <div class="image">
           <img src="./../../../../assets/images/BackGround/Lambda-expressions-tutorial2.png" alt="">
@@ -24,16 +24,16 @@
           style="border: none"></iframe>
         <iframe src="./../../../../assets/docs/Lambda-Expression/02-Lambda-Expression-Introduction.pdf" width="95%" height="900px"
           style="border: none"></iframe>
-       
+
       </div>
-  
+
       <h3> Java Prints MainClass Part01 Files</h3>
       <div class="image img-fluid">
         <img src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/01_MainClass.png"
           alt="Arquivo Html" />
-       
+
       </div>
-  
+
       <h3> Java Prints Console Files Method </h3>
       <div class="image img-fluid">
         <img
@@ -66,12 +66,12 @@
         <img
           src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021396 (9).png"
           alt="Arquivo Html" />
-      
-   
-  
+
+
+
       </div>
-   
-  
-  
+
+
+
     </div>
   </div>
