Lambda-Sintax done

--- a/tonyClass/src/app/java/lambda/lambda-sintax/lambda-sintax.component.html
+++ b/tonyClass/src/app/java/lambda/lambda-sintax/lambda-sintax.component.html
@@ -2,7 +2,11 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button type="button" class="btn btn-outline-light" routerLink="/java/lambda">
+        <button
+          type="button"
+          class="btn btn-outline-light"
+          routerLink="/java/lambda"
+        >
           Lambda in Java
         </button>
       </div>
@@ -17,34 +21,85 @@
     <h3>Lambda Abstract Methods</h3>
     <div class="col-xs-12 picture">
       <div class="image">
-        <img src="./../../../../assets/images/BackGround/Lambda-expressions-tutorial2.png" alt="">
+        <img
+          src="./../../../../assets/images/BackGround/Lambda-expressions-tutorial3.png"
+          alt=""
+        />
       </div>
       <h3>Lambda PDF File</h3>
-      <iframe src="./../../../../assets/docs/Lambda-Expression/01-Lambda-Expression-Introduction.pdf" width="95%" height="900px"
-        style="border: none"></iframe>
-
-
+      <iframe
+        src="./../../../../assets/docs/Lambda-Expression/02-Lambda-Expression-Introduction.pdf"
+        width="95%"
+        height="900px"
+        style="border: none"
+      ></iframe>
     </div>
 
-    <h3> Java Prints MainClass Part01 Files</h3>
+    <h3>Java Prints MainClass Part01 Files</h3>
     <div class="image img-fluid">
-      <img src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/01_MainClass.png"
-        alt="Arquivo Html" />
-
+      <img
+        src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/01_MainClass.png"
+        alt="Arquivo Html"
+      />
     </div>
 
-    <h3> Java Prints Console Files Method </h3>
+    <h3>Java Prints Console Files Method</h3>
     <div class="image img-fluid">
       <img
         src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021396.png"
-        alt="Arquivo Html" />
-
-
-
-
+        alt="Arquivo Html"
+      />
     </div>
 
+    <h3>Lambda Abstract Methods Part02</h3>
+    <div class="col-xs-12 picture">
+      <h3 style="margin: 1%;">Lambda PDF2 File</h3>
+      <iframe
+        src="./../../../../assets/docs/Lambda-Expression/03-Lambda-Expression-Introduction.pdf"
+        width="95%"
+        height="900px"
+        style="border: none"
+      ></iframe>
+    </div>
 
+    <h3>Java Prints MainClass Part02 Files</h3>
+    <div class="image img-fluid">
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/01_Main.java_Function.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/01A_Main.java_Function.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/01B_Main.java_Function.png"
+        alt="Arquivo Html"
+      />
+    </div>
 
+    <h3>Java Prints Console Files Method</h3>
+    <div class="image img-fluid">
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (1).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (2).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (3).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda-Expression/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (4).png"
+        alt="Arquivo Html"
+      />
+    </div>
   </div>
 </div>
