--- a/tonyClass/src/app/java/lambda/lambda.component.html
+++ b/tonyClass/src/app/java/lambda/lambda.component.html
@@ -4,14 +4,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/java/lambda/introduction">Introduction Lambda</a>
         </li>
-      
-  
-  
-  
-  
-  
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/java/lambda/lambda-sintax">Lambda Sintax</a>
+        </li>
+
+
+
+
+
+
     </ul>
-  
+
     <div class="container container-fluid image">
       <main>
         <div class="row">
@@ -43,9 +46,8 @@
       </main>
     </div>
   </div>
-  
-  
-  
-  
-  
-  
+
+
+
+
+
