--- a/tonyClass/src/app/java/lambda/lambda-sintax/lambda-sintax.component.html
+++ b/tonyClass/src/app/java/lambda/lambda-sintax/lambda-sintax.component.html
@@ -18,7 +18,7 @@
       <h2>Lambda Expression</h2>
     </div>
 
-    <h3>Lambda Abstract Methods</h3>
+    <h3>Lambda  Methods</h3>
     <div class="col-xs-12 picture">
       <div class="image">
         <img
