--- a/tonyClass/src/app/java/lambda/function-interfaces-consulmer-and-predicate/function-interfaces-consulmer-and-predicate.component.html
+++ b/tonyClass/src/app/java/lambda/function-interfaces-consulmer-and-predicate/function-interfaces-consulmer-and-predicate.component.html
@@ -23,10 +23,6 @@
     <div class="col-xs-12 picture">
       <div class="image">
         <img
-          src="./../../../../assets/images/BackGround/Lambda-Function-Interfaces.png"
-          alt=""
-        />
-        <img
           src="./../../../../assets/images/BackGround/Lambda-Function-Interfaces2.png"
           alt=""
         />
@@ -40,18 +36,107 @@
       ></iframe>
     </div>
 
-    <h3>Java Prints MainClass Part01 Files</h3>
+    <h3>Java Prints MainClass Files</h3>
     <div class="image img-fluid">
       <img
-        src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/01_MainClass.png"
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/01_Lambda_Function-Interface-Consumer-and-Predicate.png"
         alt="Arquivo Html"
       />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/02_Lambda_Function-Interface-Consumer-and-Predicate.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/02A_Lambda_Function-Interface-Consumer-and-Predicate.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/04_Lambda_Function-Interface-BiConsumer.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/05_Lambda_Function-Interface-BiConsumer.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/06_Lambda_Function-Interface-BiConsumer_Lambda_use-to_format.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/07_Lambda_Function-Interface-_Remove_Item.png"
+        alt="Arquivo Html"
+      />
+
     </div>
 
     <h3>Java Prints Console Files Method</h3>
     <div class="image img-fluid">
       <img
-        src="./../../../../assets/images/Java/Lambda/Lambda-Instroduction/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021396.png"
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398.png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (1).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (2).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (3).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (4).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (5).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (6).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (7).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (8).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (9).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (10).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (11).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (12).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (13).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (14).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (15).png"
+        alt="Arquivo Html"
+      />
+      <img
+        src="./../../../../assets/images/Java/Lambda/03_Lambda_Function-Interface-Consumer-and-Predicate/glintt.udemy.com_course_java-the-complete-java-developer-course_learn_lecture_37021398 (16).png"
         alt="Arquivo Html"
       />
     </div>
