--- a/tonyClass/src/app/java/lambda/lambda.component.html
+++ b/tonyClass/src/app/java/lambda/lambda.component.html
@@ -7,6 +7,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/java/lambda/lambda-sintax">Lambda Sintax</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/java/lambda/lambda-func-interface-consulmer-predicate">Lambda Function Consulmer Predicate</a>
+        </li>
 
 
 
